--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-istanbul-coverage": "0.0.2",
     "grunt-karma": "~0.6.2",
+    "grunt-karma-coveralls": "~2.4.0",
     "karma-coverage": "~0.1.2",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
