Update jsdelivr include script to awesome new single tag version. Fix Bower angular dependancy as they have started working on a 1.3.0 which causes conflicts. Added the ta-element-select event and other functionality, framework to support #87 #103

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "test": "grunt",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install --allow-root"
   },
   "repository": {
     "type": "git",
