--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textangular",
-  "version": "1.4.3",
+  "version": "1.4.1",
   "description": "A radically powerful Text-Editor/Wysiwyg editor for Angular.js",
   "maintainers": [
     {
@@ -18,7 +18,13 @@
   ],
   "license": "MIT",
   "homepage": "http://textangular.com",
-  "main": "./dist/textAngular.min.js",
+  "main": [ 
+    "./dist/textAngular.min.js", 
+    "./dist/textAngular.css"
+  ],
+  "dependencies": {
+    "rangy": "^1.3.0"
+  },
   "browserDependencies": {
     "angular": "^1.2.x",
     "rangy": "^1.3.0",
