--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textAngular-pjn",
-  "version": "1.5.2-pre2",
+  "version": "BS4-1.5.2-pre2",
   "description": "Editor de texto HTML",
   "maintainers": [
     {
