update files for release 1.5.17-0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textangular",
-  "version": "1.5.16.1",
+  "version": "1.5.17-0",
   "description": "A radically powerful Text-Editor/Wysiwyg editor for Angular.js",
   "maintainers": [
     {
