--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "textAngular",
-  "version": "1.5.16.1",
+  "version": "1.5.17-0",
   "main": [
     "./dist/textAngular.js",
     "./dist/textAngular-sanitize.js",
