--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "angular": ">=1.3.x",
-    "font-awesome": ">=4.0.x",
+    "font-awesome": "~4.0.x",
     "rangy": "~1.3.0"
   },
   "devDependencies": {
