--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "textangular",
-  "version": "1.5.16",
+  "name": "@mspecs/textangular",
+  "version": "1.6.0",
+  "repository": "git://github.com/mspecs/textangular.git",
   "description": "A radically powerful Text-Editor/Wysiwyg editor for Angular.js",
   "maintainers": [
     {
@@ -58,9 +59,5 @@
   },
   "scripts": {
     "test": "bower install && grunt travis-test --verbose"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/fraywing/textAngular.git"
   }
 }
